Use darker background

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ $icinga-blue: rgba(0, 149, 191, 1);
 // Base styles
 // ----------------------------------------------------------------------------
 html {
-  background-image: url("icinga-hero-background.jpg");
+  background-image: url("icinga-hero-background-darker.jpg");
   background-color: $background-color;
   /* Stretch the background image, don't duplicate it */
   -webkit-background-size: cover; /* For WebKit */
