Add data transfer widget; add moreinfo to doughnuts

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -200,6 +200,11 @@ h3 {
   font-size: 15px;
 }
 
+.unit-info {
+  padding: 5px;
+  font-size: 15px;
+}
+
 .updated-at {
   padding: 5px;
   font-size: 12px;
