--- a/dashboards/icinga2-min.erb
+++ b/dashboards/icinga2-min.erb
@@ -43,6 +43,12 @@ li {
   font-size: 10px;
   bottom: 15px;
 }
+
+.unit-info {
+  font-size: 10px;
+  bottom: 15px;
+}
+
 .widget {
   vertical-align: top;
   padding: 2px 3px;
@@ -127,12 +133,16 @@ li {
       ></div>
     </li>
 
+    <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
+      <div class="scrollable" data-id="icinga-severity" data-view="List" data-unordered="true" data-title="Problems"></div>
+    </li>
+
     <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="icinga-room-climate" data-view="Number" data-title="Room Climate"></div>
     </li>
 
-    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="icinga-stats" data-view="List" data-unordered="true" data-title="Statistics"></div>
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="icinga-isp" data-view="Datatransfer" data-title="Internet Access"></div>
     </li>
 
     <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
@@ -150,46 +160,10 @@ li {
       ></div>
     </li>
 
-    <!-- Problems -->
-    <!--
-    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="icinga-host-meter" data-view="Meter" data-title="Host Problems" data-min="0" data-max="100"></div>
-    </li>
-    <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
-      <div data-id="icinga-service-meter" data-view="Meter" data-title="Service Problems" data-min="0" data-max="100"></div>
-    </li>
-    -->
-
-    <!-- Handled -->
-    <!--
-    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="handled-stats" data-view="List" data-unordered="true" data-title="Handled"></div>
-    </li>
-    -->
-    <!-- Unhandled Host and Service Problems -->
-    <!--
-    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="icinga-host-problems" data-view="Simplelist" data-title="Unhandled Hosts"></div>
-    </li>
-    <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="icinga-service-problems" data-view="Simplelist" data-title="Unhandled Services"></div>
-    </li>
-    -->
-
-    <!-- Takes two rows for all service problems by severity -->
-    <li data-row="1" data-col="4" data-sizex="1" data-sizey="2">
-      <div class="scrollable" data-id="icinga-severity" data-view="List" data-unordered="true" data-title="Problems"></div>
+    <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="icinga-stats" data-view="List" data-unordered="true" data-title="Statistics"></div>
     </li>
 
-    <!-- Icinga Web 2 iFrame. getIcingaWeb2Url() is defined in config.ru and reads from config/icinga2*.json -->
-    <!--
-    <li data-row="3" data-col="1" data-sizex="2" data-sizey="2">
-      <div data-id="iframe" data-view="Iframe" data-title="Icinga Web Host Problems" data-url="<%=getIcingaWeb2Url()%>/monitoring/list/hosts?host_problem=1&sort=host_severity&showFullscreen&showCompact"></div>
-    </li>
-    <li data-row="3" data-col="3" data-sizex="2" data-sizey="2">
-      <div data-id="iframe" data-view="Iframe" data-title="Icinga Web Service Problems" data-url="<%=getIcingaWeb2Url()%>/monitoring/list/services?service_problem=1&sort=service_severity&dir=desc&showFullscreen&showCompact"></div>
-    </li>
-    -->
   </ul>
 
 </div>
