Support configuration of the locale of the clock

--- a/dashboards/icinga2-min.erb
+++ b/dashboards/icinga2-min.erb
@@ -107,7 +107,12 @@ li {
   <ul>
     <!-- Statistics -->
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-view="Clock" data-title="<%=getTimeZone()%>" data-timezone="<%=getTimeZone()%>"></div>
+      <div
+        data-view="Clock"
+        data-title="<%=getTimeZone()%>"
+        data-timezone="<%=getTimeZone()%>"
+        data-locale="de-DE"
+      ></div>
     </li>
 
     <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
