Adjust font sizes for clock, number and data transfer

--- a/widgets/clock/clock.scss
+++ b/widgets/clock/clock.scss
@@ -10,4 +10,15 @@ $background-color:  #dc5945;
 
   background-color: $background-color;
 
+  .title {
+  }
+
+  .date {
+  }
+
+  .time {
+    font-size: 84px;
+    font-weight: 700;
+  }
+
 }
