Refactor datatransfer widget and move total to a new datausage widget

--- a/dashboards/icinga2-min.erb
+++ b/dashboards/icinga2-min.erb
@@ -62,26 +62,17 @@ $(function() {
       ></div>
     </li>
 
-    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div
         data-id="icinga-isp"
         data-view="Datatransfer"
-        data-title="Internet Access"
       ></div>
     </li>
 
     <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
       <div
-        data-id="bar-chart-checks"
-        data-view="Chartjs"
-        data-type="horizontalBar"
-        data-header="Active Checks"
-        data-title="Active Checks"
-        data-labels="Hosts/min,Services/min"
-        data-colornames="aqua,lime"
-        data-datasets="42,404"
-        data-height="330"
-        data-width="330"
+        data-id="icinga-isp-usage"
+        data-view="Datausage"
       ></div>
     </li>
 
