Use meter for hosts and services overview

--- a/dashboards/icinga2-min.erb
+++ b/dashboards/icinga2-min.erb
@@ -24,24 +24,16 @@ $(function() {
 
     <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
       <div
-        data-id="doughnut-pie-hosts"
-        data-view="Chartjs"
-        data-type="doughnut"
-        data-title="Hosts"
-        data-colornames="green,red"
-        data-height="300"
-        data-width="300"
+           data-id="icinga-host-meter"
+           data-view="Meter"
+           data-title="Hosts"
       ></div>
     </li>
     <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div
-        data-id="doughnut-pie-services"
-        data-view="Chartjs"
-        data-type="doughnut"
+        data-id="icinga-service-meter"
+        data-view="Meter"
         data-title="Services"
-        data-colornames="green,yellow,red,purple"
-        data-height="300"
-        data-width="300"
       ></div>
     </li>
 
