--- a/widgets/meter/meter.scss
+++ b/widgets/meter/meter.scss
@@ -5,8 +5,8 @@
 
 @import "application.scss";
 
-$meter-background:  darken($icinga-blue, 12%);
-$meter-color: rgba(255, 255, 255, 0.95);
+$meter-background:  rgba(255, 85, 102, 0.8);
+$meter-color:       rgba(68, 187, 119, 1);
 
 // ----------------------------------------------------------------------------
 // Widget-meter styles
