clock widget layout + css

--- a/widgets/clock/clock.scss
+++ b/widgets/clock/clock.scss
@@ -11,6 +11,7 @@ $background-color:  #dc5945;
   background-color: $background-color;
 
   .title {
+    margin: 5px;
   }
 
   .date {
@@ -18,7 +19,7 @@ $background-color:  #dc5945;
   }
 
   .time {
-    font-size: 70px;
+    font-size: 68px;
     font-weight: 700;
   }
 
