--- a/widgets/datatransfer/datatransfer.scss
+++ b/widgets/datatransfer/datatransfer.scss
@@ -1,10 +1,8 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #47bbb3;
-$value-color: #fff;
+@import "application.scss";
 
-$title-color:       rgb(255, 255, 255);
 $unitinfo-color:    rgb(255, 255, 255);
 $uptime-color:      rgb(255, 255, 255);
 
