--- a/widgets/number/number.scss
+++ b/widgets/number/number.scss
@@ -1,10 +1,8 @@
 // ----------------------------------------------------------------------------
 // Sass declarations
 // ----------------------------------------------------------------------------
-$background-color:  #47bbb3;
-$value-color:       #fff;
+@import "application.scss";
 
-$title-color:       rgb(255, 255, 255);
 $moreinfo-color:    rgb(255, 255, 255);
 
 // ----------------------------------------------------------------------------
