--- a/dashboards/icinga2-min.erb
+++ b/dashboards/icinga2-min.erb
@@ -54,11 +54,11 @@ $(function() {
       ></div>
     </li>
 
-    <li data-row="3" data-col="1" data-sizex="1" data-sizey="2">
+    <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
       <div
         data-id="icinga-room-climate"
-        data-view="Number"
-        data-title="Room Climate"
+        data-view="Climate"
+        data-title="Living Room"
       ></div>
     </li>
 
@@ -66,6 +66,7 @@ $(function() {
       <div
         data-id="icinga-isp"
         data-view="Datatransfer"
+        data-title="Internet Access"
       ></div>
     </li>
 
@@ -73,6 +74,7 @@ $(function() {
       <div
         data-id="icinga-isp-usage"
         data-view="Datausage"
+        data-title="Internet Usage"
       ></div>
     </li>
 
@@ -82,6 +84,14 @@ $(function() {
         data-view="List"
         data-unordered="true"
         data-title="Statistics"
+      ></div>
+    </li>
+
+    <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
+      <div
+        data-id="dns-stats"
+        data-view="Dnsstats"
+        data-title="DNS Block Rate"
       ></div>
     </li>
 
