--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="mobile-web-app-capable" content="yes">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="mobile-web-app-capable" content="yes">
 
-  <title><%= yield_content(:title) %></title>
+    <title><%= yield_content(:title) %></title>
 
-  <!-- The javascript and css are managed by sprockets. The files can be found in the /assets folder-->
-   <script type="text/javascript" src="/assets/Chart.bundle.min.js"></script>
-  <script type="text/javascript" src="/assets/application.js"></script>
-  <link rel="stylesheet" href="/assets/application.css">
+    <!-- The javascript and css are managed by sprockets. The files can be found in the /assets folder-->
+    <script type="text/javascript" src="/assets/Chart.bundle.min.js"></script>
+    <script type="text/javascript" src="/assets/application.js"></script>
+    <link rel="stylesheet" href="/assets/application.css">
 
-  <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
-  <!-- Set the favicon. Note: 'images' subpath is automatically detected. -->
-  <link rel="icon" href="/assets/favicon.png">
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
+    <!-- Set the favicon. Note: 'images' subpath is automatically detected. -->
+    <link rel="icon" href="/assets/favicon.png">
 
-</head>
+    <link rel="manifest" href="/assets/manifest.json">
+  </head>
   <body>
     <div id="container">
       <div id="banner">
