Add tactical meter for services

--- a/dashboards/icinga2-min.erb
+++ b/dashboards/icinga2-min.erb
@@ -40,7 +40,7 @@ $(function() {
     <li data-row="1" data-col="3" data-sizex="1" data-sizey="2">
       <div
         data-id="icinga-service-meter"
-        data-view="Meter"
+        data-view="Tacticalmeter"
         data-title="Services"
       ></div>
     </li>
